--- a/ncl22.tex
+++ b/ncl22.tex
@@ -1357,5 +1357,5 @@ C.-S.W.\ by the ESF funded Estonian IT Academy research measure
 Research Fund grant no.~196323-053.
 
   \bibliographystyle{eptcs}
-  \bibliography{docRefs}
+  \bibliography{ncl22}
 \end{document}
