--- a/logic4peace-slides.tex
+++ b/logic4peace-slides.tex
@@ -640,7 +640,7 @@ is a skew monoidal category.
 \begin{itemize}
 
 \item Essentially by definition, the free skew monoidal category on a
-  set $\Var$ can be described as a deductive system, a ``categorical''
+  set $\Var$ can be presented as a deductive system, a ``categorical''
   or Hilbert-style calculus.
 
 \medskip
@@ -759,8 +759,8 @@ f \doteq f \comp \id
 
 
 \item This means that the logic of skew monoidal categories is more
-  interesting in comparison linear logic with mult conj only---the
-  same consequence can have multiple distinct derivations.
+  interesting in comparison to posit mult linear logic---the same
+  consequence can have multiple distinct derivations.
 
 \end{itemize}
 
@@ -774,8 +774,10 @@ f \doteq f \comp \id
 
 \begin{itemize}
 
-\item Here is a different deductive description of the free skew
-  monoidal category, a (cut-free) ``sequent calculus''.
+\item Here is a cut-free sequent calculus that turns out to precisely
+  correspond to the categorical calculus. (In fact, it is, by
+  definition, a presentation of the free left-representable skew
+  multicategory.)
 
 \item \emph{Sequents} now take the form $S \mid \Gamma \vdash C$
   where
@@ -954,7 +956,7 @@ f \doteq f \comp \id
 
 \begin{frame}
 
-\frametitle{Sequent calculus ctd.}
+\frametitle{categorical calculus vs sequent calculus}
 
 \begin{itemize}
 
@@ -1186,7 +1188,7 @@ first but cannot split the antecedent suitably).
 
 \begin{frame}
 
-\frametitle{Focused fragment}
+\frametitle{Sequent calculus vs focused fragment}
 
 \begin{itemize}
 
