--- a/logic4peace-slides.tex
+++ b/logic4peace-slides.tex
@@ -288,9 +288,9 @@ Lambek calculus & monoidal biclosed categories
 
 \begin{itemize}
 
-\item Intuitionistic linear logic (for monoidal categories) drops the
-  structural rules of weakening and contraction of intuitionistic
-  logic:
+\item Mult intuit linear logic (the logic of symm monoidal closed
+  categories) drops the structural rules of weakening and contraction
+  of intuitionistic logic:
 \[
 \scriptsize
 \begin{array}{c}
@@ -304,8 +304,8 @@ It is therefore called \emph{substructural} and can be thought of as a
 
 \bigskip
 
-\item Recent years have seen the discovery and study of \emph{skew}
-  monoidal, \emph{skew} closed and related kinds of structured
+\item Recent years have seen the discovery and study of skew
+  monoidal, skew closed and other types of \emph{skew structured}
   categories by Szlach\'anyi, Street, Bourke, Lack, others.
 
 \item These drop one half of unitality and associativity of
@@ -327,7 +327,7 @@ It is therefore called \emph{substructural} and can be thought of as a
 \]
 
 \item Skew structured categories define logics yet more substructural
-  than intuitionistic linear logic.
+  than mult intuit linear logic.
 
 \end{itemize}
 
