--- a/logic4peace.tex
+++ b/logic4peace.tex
@@ -24,14 +24,14 @@ example, is the logic of symmetric monoidal closed categories and
 Lambek's syntactic calculus is the logic of nonsymmetric semimonoidal
 biclosed (``residuated'') categories.
 
-In 2012, Szachl\'anyi \cite{Szl} introduced skew monoidal categories
+In 2012, Szlach\'anyi \cite{Szl} introduced skew monoidal categories
 as a weakening of monoidal categories. In skew monoidal categories,
 the laws of unitality and associativity are not natural isomorphisms
 as in monoidal categories, but merely natural transformations in a
 specific direction. Although considered in their own right only
 recently, skew monoidal categories arise naturally in many categorical
 contexts and have therefore quickly received quite some traction since
-their inception. Since Szachl\'anyi's seminal work, other types of
+their inception. Since Szlach\'anyi's seminal work, other types of
 skew categorical structure have been studied: skew closed and monoidal
 closed categories by Street \cite{Str}, braided skew monoidal
 categories by Bourke and Lack \cite{BL}. These works have not,
@@ -46,11 +46,12 @@ monoidal closed categories---from the perspective of structural proof
 theory, specifically sequent calculi and normal forms of sequent
 derivations, so-called focused derivations. We have shown that these
 structures define meaningful logics of resources where the consumption
-and production of resources is more controlled than in linear
-logics. We have exploited proof-theoretic methods to formulate and
-prove coherence theorems for these structures.
+and production of resources is governed by a more restrictive
+discipline than in linear logics. We have exploited proof-theoretic
+methods to formulate and prove coherence theorems for these
+structures.
 
-In the talk, we will explain these points on the examples of skew
+In the talk, we will explain these points on the cases of skew
 monoidal and skew monoidal closed categories.
 
 \small
@@ -58,14 +59,14 @@ monoidal and skew monoidal closed categories.
 \begin{thebibliography}{99}
 
 \bibitem{Lam} J.~Lambek. Deductive systems and categories I: Syntactic
-  calculus and residuated categories. \emph{Math. Syst. Theor.} 2(4),
+  calculus and residuated categories. \emph{Math. Syst. Theor.}, 2(4),
   pp.~287--318, 1968.
 
 \bibitem{Szl} K.~Szlach\'anyi. Skew-monoidal categories and
-  bialgebroids. \emph{Adv. Math.} 231(3--4), pp.~1694--1730, 2012.
+  bialgebroids. \emph{Adv. Math.}, 231(3--4), pp.~1694--1730, 2012.
 
 \bibitem{Str} R.~Street. Skew-closed categories. \emph{J. Pure
-Appl. Algebra} 217(6), pp.~973--988, 2013.
+Appl. Algebra}, 217(6), pp.~973--988, 2013.
 
 \bibitem{BL} J.~Bourke, S.~Lack. Braided skew monoidal categories.
 \emph{Theor. Appl. Categ.}, 35(2), pp.~19--63, 2020.
